// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Posts /> should render component with uiState prop which value is "loading" 1`] = `
<div>
  <Loading />
</div>
`;

exports[`<Posts /> should render initial page 1`] = `
<div>
  <div
    className="ts text container"
  >
    <div
      className="ts divided items"
    />
  </div>
</div>
`;
